# Outlook-Classic-MCP

./: README.md  __init__.py  __main__.py  bridge.py  constants.py  entrypoint.py  errors.py  pyproject.toml  schemas.py  server.py
client/: account.py  calendar.py  categories.py  contacts.py  folders.py  mail.py  ooo.py  rules.py  tasks.py
tools/: __init__.py  account.py  calendar.py  categories.py  contacts.py  folders.py  mail.py  ooo.py  rules.py  tasks.py
utils/: formatting.py  paths.py  safety.py
