[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "outlook-classic-mcp"
version = "0.2.3"
description = "Local MCP server for classic Outlook desktop on Windows (COM, no Azure app required)."
license = { text = "MIT" }
authors = [{ name = "Anas Shaikh" }]
requires-python = ">=3.10"
keywords = ["mcp", "outlook", "model-context-protocol", "claude", "windows"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "mcp>=1.10",
    "pydantic>=2.6",
    "pywin32>=306; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = ["build>=1.0", "twine>=5.0", "pytest>=8.0"]

[project.scripts]
outlook-mcp = "outlook_mcp.entrypoint:main"

[tool.setuptools.packages.find]
where = [".."]
include = ["outlook_mcp*"]
